--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-        <p>Ini Project 1</p>
-
+        <p><strong>Contact: </strong></p>
 </body>
 </html>
