--- a/index.html
+++ b/index.html
@@ -8,27 +8,49 @@
     <!--style--> <style></style>
 
 </head>
-<body>
-    <h1>Portofolio</h1>
-    <img src="img/mygweh.png" alt="Jox aja" style="width: 7rem;height: auto;">
-    <h2>Joel Daniel Mark</h2>
+<body style="padding: 12px;"s>
+    <h1>PORTOFOLIO</h1>
+    <ul>
+        <li>
+            <a href="#Home">Home</a>
+        </li>
+    </ul>
+    <ul>
+        <li>
+            <a href="#About">About</a>
+        </li>
+    </ul>
+    <ul>
+        <li>     
+        <a href="contact.html">Contact</a></li>     
+        </li>
+    </ul>
+
+    </p>
+    <hr>
+    <img src="img/mygweh.png" alt="Jox aja" style="width: 12rem;height: auto;">
+    <h3>Joel Daniel Mark Wenas</h3>
     <dl>
-            <dt>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae, voluptate!</dt>
+            <dt>Joel merupakan seorang mahasiswa UPH, yang mengambil jurusan Informatika.</dt>
         </dl>
 
    <!-- end of heading and paragraph-->
-
-    <p>Mengingatkan kalo <strong>Hari Senin.</strong> sudah mendekat</p>
-
     <!--hyperlink-->
-
-    <p>Project List: </p>
-        <ol type="I">
-        <li><a href="project1.html">Project 1</a></li>
-        <li><a href="project2.html">Project 2</a></li>
-        <li><a href="project3.html">Project 3</a></li>
-</ol>
-
+    <hr>
+    <p><strong>Project List: </strong></p>
+        <div class="container">
+            <div class="project">
+                <ul>
+                    <li>
+                        <a href="https://nfsmods.xyz/" target="_blank">NFS</a></li>
+                    </ul>
+                </li>
+            </div>
+        <div class="project">
+            <li>
+                <a href="https://umamusume.com/" target="_blank">Uma</a></li> 
+            </li>
+        </div>
 
 <!--script--> 
     <script></script>   
