--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!--style--> <style></style>
 
 </head>
-<body style="padding: 12px;"s>
+<body style="padding: 10px;"s>
     <h1>PORTOFOLIO</h1>
     <ul>
         <li>
@@ -22,7 +22,7 @@
     </ul>
     <ul>
         <li>     
-        <a href="contact.html">Contact</a></li>     
+        <a href="#Contact">Contact</a></li>     
         </li>
     </ul>
 
@@ -31,26 +31,28 @@
     <img src="img/mygweh.png" alt="Jox aja" style="width: 12rem;height: auto;">
     <h3>Joel Daniel Mark Wenas</h3>
     <dl>
-            <dt>Joel merupakan seorang mahasiswa UPH, yang mengambil jurusan Informatika.</dt>
+            <dt>Joel merupakan seorang mahasiswa UPH, yang mengambil jurusan Informatika. Hobby</dt>
         </dl>
 
    <!-- end of heading and paragraph-->
     <!--hyperlink-->
     <hr>
-    <p><strong>Project List: </strong></p>
-        <div class="container">
-            <div class="project">
-                <ul>
-                    <li>
-                        <a href="https://nfsmods.xyz/" target="_blank">NFS</a></li>
-                    </ul>
-                </li>
-            </div>
-        <div class="project">
-            <li>
-                <a href="https://umamusume.com/" target="_blank">Uma</a></li> 
-            </li>
-        </div>
+    <p><strong>Projects List: </strong></p>
+        <div style="display: flex; flex-direction: row; justify-content:space-evenly; height: 2rem; padding-top: 10%;">
+        <span><a href="https://nfsmods.xyz/" target="_blank">Project 1</a></span>
+        <span><a href="https://umamusume.com/" target="_blank">Project 2</a></span>
+        <span><a href="https://nexusmods.com/" target="_blank">Project 3</a></span>
+        <span><a href="https://nfsmods.xyz/" target="_blank">Project 4</a></span>
+    </div>
+    <hr>
+     
+    <h4>Contacts: </h4>
+     <div style="display: flex; flex-direction: row; justify-content:space-evenly; height: 2rem; padding-top: 10%;">
+        <span><a href="Instagram">Instagram</a></span>
+        <span><a href="Discord">Discord</a></span>
+        <span><a href="Discord">Github</a></span>
+    </div>
+
 
 <!--script--> 
     <script></script>   
