--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
         <span><a href="https://nfsmods.xyz/" target="_blank">Project 1</a></span>
         <span><a href="https://umamusume.com/" target="_blank">Project 2</a></span>
         <span><a href="https://nexusmods.com/" target="_blank">Project 3</a></span>
-        <span><a href="https://nfsmods.xyz/" target="_blank">Project 4</a></span>
+        <span><a href="https://monkeytype.com/" target="_blank">Project 4</a></span>
     </div>
     <hr>
      
     <h4>Contacts: </h4>
      <div style="display: flex; flex-direction: row; justify-content:space-evenly; height: 2rem; padding-top: 10%;">
-        <span><a href="Instagram">Instagram</a></span>
-        <span><a href="Discord">Discord</a></span>
-        <span><a href="Discord">Github</a></span>
+        <span><a href="https://www.instagram.com/joelldmw">Instagram</a></span>
+        <span><a href="https://discord.gg/2MrQXGMN">Evo</a></span>
+        <span><a href="https://github.com/hiexizyy/joxsijowel">Github</a></span>
     </div>
 
 
