--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
     <hr>
     <p><strong>Projects List: </strong></p>
         <div style="display: flex; flex-direction: row; justify-content:space-evenly; height: 2rem; padding-top: 10%;">
-        <span><a href="https://nfsmods.xyz/" target="_blank">Project 1</a></span>
-        <span><a href="https://umamusume.com/" target="_blank">Project 2</a></span>
-        <span><a href="https://nexusmods.com/" target="_blank">Project 3</a></span>
-        <span><a href="https://monkeytype.com/" target="_blank">Project 4</a></span>
+        <span><a href="https://www.figma.com/proto/ujDaobrdV2Ehk6uMpjmWvG/Res-trun-rant---The-Rise-of-Cakaliardo--de-Flambe?node-id=3-3&starting-point-node-id=3%3A3&t=evJ4paV08ILXjwzd-1" target="_blank">Project 1</a></span>
+        <span><a href="https://github.com/kaptenCakalang/Lab-PPL" target="_blank">Project 2</a></span>
+        <span><a href="https://github.com/hiexizyy/joxsijowel" target="_blank">Project 3</a></span>
     </div>
     <hr>
      
