--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <img src="img/mygweh.png" alt="Jox aja" style="width: 12rem;height: auto;">
     <h3>Joel Daniel Mark Wenas</h3>
     <dl>
-            <dt>Joel merupakan seorang mahasiswa UPH, yang mengambil jurusan Informatika. Hobby</dt>
+            <dt>Joel merupakan seorang mahasiswa UPH, yang mengambil jurusan Informatika.</dt>
         </dl>
 
    <!-- end of heading and paragraph-->
@@ -40,7 +40,7 @@
     <p><strong>Projects List: </strong></p>
         <div style="display: flex; flex-direction: row; justify-content:space-evenly; height: 2rem; padding-top: 10%;">
         <span><a href="https://www.figma.com/proto/ujDaobrdV2Ehk6uMpjmWvG/Res-trun-rant---The-Rise-of-Cakaliardo--de-Flambe?node-id=3-3&starting-point-node-id=3%3A3&t=evJ4paV08ILXjwzd-1" target="_blank">Project 1</a></span>
-        <span><a href="https://github.com/kaptenCakalang/Lab-PPL" target="_blank">Project 2</a></span>
+        <span><a href="https://github.com/hiexizyy/exercise-flexbox" target="_blank">Project 2</a></span>
         <span><a href="https://github.com/hiexizyy/joxsijowel" target="_blank">Project 3</a></span>
     </div>
     <hr>
