--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </ul>
         </nav>
         <div class="contact-button">
-            <a href="#contact">ikuzo omae!</a>
+            <a href="#contact">Help~</a>
         </div>
     </header>
 
@@ -46,28 +46,28 @@
             <div class="projects-container">
                 <div class="project-card">
                     <div class="project-image-placeholder"></div>
-                    <h3>Restaurant UI/UX</h3>
-                    <p>Perlakuan abang-abang Rest-our-rant.</p>
-                    <a href="https://www.figma.com/proto/ujDaobrdV2Ehk6uMpjmWvG/Res-trun-rant---The-Rise-of-Cakaliardo--de-Flambe?node-id=3-3&starting-point-node-id=3%3A3&t=evJ4paV08ILXjwzd-1" target="_blank">View Design</a>
+                    <h3>The Rise of Cakaliardo</h3>
+                    <p>Projek ini merupakan layout game dari game Rest-turn-rant- or rather, The Rise of Cakaliardo.</p>
+                    <a href="https://www.figma.com/proto/ujDaobrdV2Ehk6uMpjmWvG/Res-trun-rant---The-Rise-of-Cakaliardo--de-Flambe?node-id=3-3&starting-point-node-id=3%3A3&t=evJ4paV08ILXjwzd-1" target="_blank">Buka dengan Figma</a>
                 </div>
                 <div class="project-card">
                     <div class="project-image-placeholder"></div>
                     <h3>Exercise-Flexbox</h3>
-                    <p>Repository baru mengenai pembuatan listing-price.</p>
-                    <a href="https://github.com/hiexizyy/exercise-flexbox" target="_blank">GitHub</a>
+                    <p>Repository baru mengenai pembuatan listing-price, and so on.</p>
+                    <a href="https://github.com/hiexizyy/exercise-flexbox" target="_blank">Pergi ke GitHub</a>
                 </div>
                 <div class="project-card">
                     <div class="project-image-placeholder"></div>
-                    <h3>Personal Repository</h3>
-                    <p>Repository pribadi, tidak punya isi dan konten yang banyak, sekedar repository biasa.</p>
-                    <a href="https://github.com/hiexizyy/joxsijowel" target="_blank">GitHub</a>
+                    <h3>Repository Pribadi</h3>
+                    <p>Sebuah Repository pribadi, belum mempunyai isi dan konten yang banyak, hanya sekedar repository biasa.</p>
+                    <a href="https://github.com/hiexizyy/joxsijowel" target="_blank">Pergi ke GitHub</a>
                 </div>
             </div>
         </section>
 
         <section id="contact" class="contact-section">
             <h2>Contacts</h2>
-            <p>Find me on the following platforms:</p>
+            <p>Sekiranya ingin bercerita lebih lanjut, kalian bisa menghubungi saya disini:</p>
             <div class="social-links">
                 <a href="https://www.instagram.com/joelldmw" target="_blank">Instagram</a>
                 <a href="https://discord.gg/2MrQXGMN" target="_blank">Discord (Evo)</a>
