misuse github repository
should've use the html link instead of the repository itself.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="project-image-placeholder"></div>
                     <h3>Exercise-Flexbox</h3>
                     <p>Repository baru mengenai pembuatan listing-price, and so on.</p>
-                    <a href="https://github.com/hiexizyy/exercise-flexbox" target="_blank">Pergi ke GitHub</a>
+                    <a href="https://hiexizyy.github.io/exercise-flexbox/" target="_blank">Pergi ke GitHub</a>
                 </div>
                 <div class="project-card">
                     <div class="project-image-placeholder"></div>
