Update inputting another project

--- a/index.html
+++ b/index.html
@@ -62,9 +62,14 @@
                     <p>Sebuah Repository pribadi, belum mempunyai isi dan konten yang banyak, hanya sekedar repository biasa.</p>
                     <a href="https://github.com/hiexizyy/joxsijowel" target="_blank">Pergi ke GitHub</a>
                 </div>
-            </div>
-        </section>
-
+                <div class="project-card">
+                    <div class="project-image-placeholder"></div>
+                    <h3>Dice Roll</h3>
+                    <p>Project ke 2, mengenai penggunaan JS dan kawan kawannya untuk game Dice Roll</p>
+                    <a href="https://hiexizyy.github.io/dice-roll/" target="_blank">Pergi ke GitHub</a>
+                </div>
+            </section>
+            
         <section id="contact" class="contact-section">
             <h2>Contacts</h2>
             <p>Sekiranya ingin bercerita lebih lanjut, kalian bisa menghubungi saya disini:</p>
