--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
             <h2>Project List</h2>
             <div class="projects-container">
                 <div class="project-card">
-                    <div class="project-image-placeholder">
-                        <img src="restoran.png" alt="">
-                    </div>
+                    <div class="project-image-placeholder"></div>
                     <h3>The Rise of Cakaliardo</h3>
                     <p>Projek ini merupakan layout game dari game Rest-turn-rant- or rather, The Rise of Cakaliardo.</p>
                     <a href="https://www.figma.com/proto/ujDaobrdV2Ehk6uMpjmWvG/Res-trun-rant---The-Rise-of-Cakaliardo--de-Flambe?node-id=3-3&starting-point-node-id=3%3A3&t=evJ4paV08ILXjwzd-1" target="_blank">Buka dengan Figma</a>
