--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
     <title>Joel's Portfolio</title>
 </head>
 <body>
-
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <header>
         <div class="logo">
             <a href="#">◆ hiexi</a>
@@ -72,7 +76,7 @@
             
         <section id="contact" class="contact-section">
             <h2>Contacts</h2>
-            <p>Sekiranya ingin bercerita lebih lanjut, kalian bisa menghubungi saya disini:</p>
+            <p>Sekiranya ingin bercerita lebih lanjut, kalian bisa menemukan saya disini:</p>
             <div class="social-links">
                 <a href="https://www.instagram.com/joelldmw" target="_blank">Instagram</a>
                 <a href="https://discord.gg/2MrQXGMN" target="_blank">Discord (Evo)</a>
